--- a/mulens_ex.ipynb
+++ b/mulens_ex.ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde3c1e8650>]"
+       "[<matplotlib.lines.Line2D at 0x7f28cff357f0>]"
       ]
      },
      "execution_count": 4,
@@ -165,7 +165,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 99/6111 [00:14<15:03,  6.65it/s]\n"
+      "  0%|          | 0/6111 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▏         | 99/6111 [00:18<18:45,  5.34it/s]\n"
      ]
     }
    ],
@@ -218,14 +225,14 @@
     "    x_filled = np.linspace(min(sample['HJD']), max(sample['HJD']), 2 * len(sample['HJD']))\n",
     "\n",
     "    # TODO: make these variables so you can adjust width/position\n",
-    "    flux_gen_interpolated = np.interp(x_filled, np.arange(len(flux))/20 + 4000, flux) - min(flux)\n",
+    "    flux_gen_interpolated = np.interp(x_filled, np.arange(len(flux))/20 + 4000, flux)\n",
     "\n",
     "    return x_filled, flux_gen_interpolated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "2fc599ec",
    "metadata": {},
    "outputs": [
@@ -312,17 +319,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "a62e92a3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2409065it [00:11, 210629.65it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0.5, 1.0, 'Microlensing Event Light Curves')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -399,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "dfbf3bf3",
    "metadata": {},
    "outputs": [
@@ -418,8 +432,8 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mUFuncTypeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCurve Summary\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43msummarize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurves\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 15\u001b[39m, in \u001b[36msummarize\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msummarize\u001b[39m(x):\n\u001b[32m     14\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSummary\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSum:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43msum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mRange:\u001b[39m\u001b[33m\"\u001b[39m, np.min(x), \u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m, np.max(x))\n\u001b[32m     17\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCenters:\u001b[39m\u001b[33m\"\u001b[39m, np.mean(x), np.median(x))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCurve Summary\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43msummarize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurves\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 17\u001b[39m, in \u001b[36msummarize\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msummarize\u001b[39m(x):\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSummary\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSum:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m'\u001b[39m\u001b[38;5;132;01m%.1E\u001b[39;00m\u001b[33m'\u001b[39m % Decimal(\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43msum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m))\n\u001b[32m     18\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mRange:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m'\u001b[39m\u001b[38;5;132;01m%.1E\u001b[39;00m\u001b[33m'\u001b[39m % Decimal(np.min(x)), \u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m'\u001b[39m\u001b[38;5;132;01m%.1E\u001b[39;00m\u001b[33m'\u001b[39m % Decimal(np.max(x)))\n\u001b[32m     19\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCenters:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m'\u001b[39m\u001b[38;5;132;01m%.1E\u001b[39;00m\u001b[33m'\u001b[39m % Decimal(np.mean(x)), \u001b[33m'\u001b[39m\u001b[38;5;132;01m%.1E\u001b[39;00m\u001b[33m'\u001b[39m % Decimal(np.median(x)))\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/school/exoplanets/microlensing/env/lib/python3.12/site-packages/numpy/_core/fromnumeric.py:2466\u001b[39m, in \u001b[36msum\u001b[39m\u001b[34m(a, axis, dtype, out, keepdims, initial, where)\u001b[39m\n\u001b[32m   2463\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[32m   2464\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m res\n\u001b[32m-> \u001b[39m\u001b[32m2466\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapreduction\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   2467\u001b[39m \u001b[43m    \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43madd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msum\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2468\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial\u001b[49m\u001b[43m=\u001b[49m\u001b[43minitial\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwhere\u001b[49m\n\u001b[32m   2469\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/school/exoplanets/microlensing/env/lib/python3.12/site-packages/numpy/_core/fromnumeric.py:86\u001b[39m, in \u001b[36m_wrapreduction\u001b[39m\u001b[34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[39m\n\u001b[32m     83\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     84\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m reduction(axis=axis, out=out, **passkwargs)\n\u001b[32m---> \u001b[39m\u001b[32m86\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mufunc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mpasskwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[31mUFuncTypeError\u001b[39m: ufunc 'add' did not contain a loop with signature matching types (dtype([('HJD', '<f8'), ('flux', '<f8'), ('cor_flux', '<f8'), ('flux_err', '<f8'), ('obsID', '<i8'), ('JD', '<f8'), ('fwhm', '<f8'), ('sky', '<f8'), ('airmass', '<f8'), ('nstar', '<i8'), ('scale', '<f8'), ('exptime', '<i8'), ('skydiff', '<f8'), ('chisq', '<f8'), ('npix', '<i8'), ('airmass1', '<f8'), ('ang1', '<f8'), ('included', '<U5')]), dtype([('HJD', '<f8'), ('flux', '<f8'), ('cor_flux', '<f8'), ('flux_err', '<f8'), ('obsID', '<i8'), ('JD', '<f8'), ('fwhm', '<f8'), ('sky', '<f8'), ('airmass', '<f8'), ('nstar', '<i8'), ('scale', '<f8'), ('exptime', '<i8'), ('skydiff', '<f8'), ('chisq', '<f8'), ('npix', '<i8'), ('airmass1', '<f8'), ('ang1', '<f8'), ('included', '<U5')])) -> None"
@@ -430,6 +444,19 @@
     "\n",
     "print(\"Curve Summary\")\n",
     "summarize(curves[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9648a386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: just focus on magnification\n",
+    "# Steps: 1) create a bunch of simulated microlensing events in mag\n",
+    "#        2) train model to extract values\n",
+    "#        3) input actual lightcurve -- see what it extracts"
    ]
   }
  ],
